--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ timezone:              Europe/Paris
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  The journey of a solo developer as I navigate the world of web development.
+  The journey of a solo developer as I navigate the world of web development. WIP
 
 # A shorter description for the sidebar.
 tagline:               >
-  The journey of a solo developer
+  The journey of a solo developer. WIP
 
 # A list of keywords for your blog
 keywords:              ["Development", "Typescript", "Web"]
