feat: update resume

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -9,9 +9,9 @@ basics:
     Autonomous, driven and focused on problem solving I will challenge your needs and we will design in close collaboration the most suitable solution for your business or project.
 
     For me writing code is a craft and the developer a craftsman.
-    This is why writing code that is clean, reviewed, maintainable and following principles like DRY (Don't repeat yourself), KISS (Keep it simple, stupid), SOC (Separation of concerns) and others to guaranty quality is a major focal point.
+    This is why writing code that is clean, reviewed, maintainable and following profesional best practices to guaranty quality is a major focal point.
 
-    As a perpetual student learning new competences is not frightening to me.
+    As a perpetual student learning new skills is not frightening to me.
   profiles:
     - network: "Github"
       username: "Mickeiik"
